--- a/index.html
+++ b/index.html
@@ -73,5 +73,10 @@
             <h4>Solidity</h4>
         </div>
     </div>
+    <footer>
+        <div style="display: flex;justify-content: center;align-items: center;">
+            <a href="https://github.com/Arannamoy-Mondal/Circle-Progress-Bar" target="_blank">Github Resources</a>
+        </div>
+    </footer>
 </body>
 </html>
