--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <footer>
         <div style="display: flex;justify-content: center;align-items: center;">
-            <a href="https://github.com/Arannamoy-Mondal/Circle-Progress-Bar" target="_blank">Github Resources</a>
+            <a href="https://github.com/Arannamoy-Mondal/Circle-Progress-Bar" target="_blank" style="color: wheat;">Github Resources</a>
         </div>
     </footer>
 </body>
