--- a/index.html
+++ b/index.html
@@ -1,82 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="progress" style="--i:100;--clr:orange">
-            <h3>100<span>%</span></h3>
-            <h4>CpIsFun</h4>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="container md-flex-col flex-col lg-flex-row">
+        <div class="progress" style="--i: 100; --clr: orange">
+          <h3>100<span>%</span></h3>
+          <h4>CpIsFun</h4>
         </div>
-        <div class="progress" style="--i:100;--clr:red">
-            <h3>100<span>%</span></h3>
-            <h4>CpIsPatheTic</h4>
+        <div class="progress" style="--i: 100; --clr: red">
+          <h3>100<span>%</span></h3>
+          <h4>CpIsPatheTic</h4>
         </div>
-        <div class="progress less" style="--i:5;--clr:red">
-            <h3>5<span>%</span></h3>
-            <h4>DevIsPatheTic</h4>
+        <div class="progress less" style="--i: 5; --clr: red">
+          <h3>5<span>%</span></h3>
+          <h4>DevIsPatheTic</h4>
         </div>
-        <div class="progress" style="--i:95;--clr:red">
-            <h3>95<span>%</span></h3>
-            <h4>DevIsFun</h4>
+        <div class="progress" style="--i: 95; --clr: red">
+          <h3>95<span>%</span></h3>
+          <h4>DevIsFun</h4>
         </div>
-        <div class="progress" style="--i:85;--clr:#43f94a">
-            <h3>85<span>%</span></h3>
-            <h4>HTML</h4>
+        <div class="progress" style="--i: 85; --clr: #43f94a">
+          <h3>85<span>%</span></h3>
+          <h4>HTML</h4>
         </div>
-        <div class="progress" style="--i:85;--clr:#FF007F">
-            <h3>80<span>%</span></h3>
-            <h4>CSS</h4>
+        <div class="progress" style="--i: 85; --clr: #ff007f">
+          <h3>80<span>%</span></h3>
+          <h4>CSS</h4>
         </div>
-        <div class="progress" style="--i:80;--clr:#00308F">
-            <h3>80<span>%</span></h3>
-            <h4>C</h4>
+        <div class="progress" style="--i: 80; --clr: #00308f">
+          <h3>80<span>%</span></h3>
+          <h4>C</h4>
         </div>
-        <div class="progress" style="--i:90;--clr:#007FFF">
-            <h3>90<span>%</span></h3>
-            <h4>C++</h4>
+        <div class="progress" style="--i: 90; --clr: #007fff">
+          <h3>90<span>%</span></h3>
+          <h4>C++</h4>
         </div>
-        <div class="progress" style="--i:70;--clr:#FFA500">
-            <h3>70<span>%</span></h3>
-            <h4>Java</h4>
+        <div class="progress" style="--i: 70; --clr: #ffa500">
+          <h3>70<span>%</span></h3>
+          <h4>Java</h4>
         </div>
-        <div class="progress" style="--i:65;--clr:#FFFF00">
-            <h3>65<span>%</span></h3>
-            <h4>JS</h4>
+        <div class="progress" style="--i: 65; --clr: #ffff00">
+          <h3>65<span>%</span></h3>
+          <h4>JS</h4>
         </div>
-        <div class="progress less" style="--i:5;--clr:purple">
-            <h3>5<span>%</span></h3>
-            <h4>Kotlin</h4>
+        <div class="progress less" style="--i: 5; --clr: purple">
+          <h3>5<span>%</span></h3>
+          <h4>Kotlin</h4>
         </div>
-        <div class="progress" style="--i:85;--clr:#03AC13">
-            <h3>85<span>%</span></h3>
-            <h4>Python</h4>
+        <div class="progress" style="--i: 85; --clr: #03ac13">
+          <h3>85<span>%</span></h3>
+          <h4>Python</h4>
         </div>
-        <div class="progress less" style="--i:0;--clr:#FFA500">
-            <h3>0<span>%</span></h3>
-            <h4>R</h4>
+        <div class="progress less" style="--i: 0; --clr: #ffa500">
+          <h3>0<span>%</span></h3>
+          <h4>R</h4>
         </div>
-        <div class="progress less" style="--i:35;--clr:#FFA500">
-            <h3>35<span>%</span></h3>
-            <h4>Ruby</h4>
+        <div class="progress less" style="--i: 35; --clr: #ffa500">
+          <h3>35<span>%</span></h3>
+          <h4>Ruby</h4>
         </div>
-        <div class="progress less" style="--i:25;--clr:#FFA500">
-            <h3>25<span>%</span></h3>
-            <h4>Rust</h4>
+        <div class="progress less" style="--i: 25; --clr: #ffa500">
+          <h3>25<span>%</span></h3>
+          <h4>Rust</h4>
         </div>
-        <div class="progress less" style="--i:50;--clr:red">
-            <h3>50<span>%</span></h3>
-            <h4>Solidity</h4>
+        <div class="progress less" style="--i: 50; --clr: red">
+          <h3>50<span>%</span></h3>
+          <h4>Solidity</h4>
         </div>
-    </div>
-    <footer>
-        <div style="display: flex;justify-content: center;align-items: center;">
-            <a href="https://github.com/Arannamoy-Mondal/Circle-Progress-Bar" target="_blank" style="color: wheat;">Github Resources</a>
-        </div>
+      </div>
+    </main>
+    <footer style="background: #222;padding: 50px;">
+      <div class="" style="display: flex;justify-content: center;align-items: center;">
+        <a
+          href="https://github.com/Arannamoy-Mondal/Circle-Progress-Bar"
+          target="_blank"
+          style="color: wheat;text-decoration: none;font-weight: bold;"
+          >Github Resources</a
+        >
+      </div>
     </footer>
-</body>
+  </body>
 </html>
