--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="progress less" style="--i: 50; --clr: red">
           <h3>50<span>%</span></h3>
-          <h4>Solidity</h4>
+          <h4 id="solidity">Solidity</h4>
         </div>
       </div>
     </main>
