--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+        <div class="" style="display: flex;justify-content: center;align-items: center;background: #222;padding: 50px;">
+            <h3 style="color: wheat;">Sample Circular Progress Bar</h3>
+        </div>
+    </header>
     <main>
       <div class="container md-flex-col flex-col lg-flex-row">
         <div class="progress" style="--i: 100; --clr: orange">
