headLine issue fixed on responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-        <div class="" style="display: flex;justify-content: center;align-items: center;background: #222;padding: 50px;">
+        <div id="headLine" class="" style="display: flex;justify-content: center;align-items: center;background: #222;padding: 50px;">
             <h3 style="color: wheat;">Sample Circular Progress Bar</h3>
         </div>
     </header>
